syntax = "proto3";
package catcher;

// SyslogCatcher - сервис обработки входящих syslog-сообщений
service SyslogCatcher {
    // Events - подключится к потоку рассылки входящих сообщений.
    rpc Events(EventRequest) returns (stream Event);
}

// EventType - тип сообытия.
enum EventType {
    Unknown         =  0;
    PortUp          =  1;
    PortDown        =  2;
    PortLoopDetect  =  3;
}

// PortSpeed - варианты скорости порта на устройстве.
enum PortSpeed {
    UnknownSpeed    =  0;
    Speed100Mb      =  1;
    Speed10Mb       =  2;
    Speed1Gb        =  3;
}

// PortDuplex - варианты состояние дуплекса.
enum PortDuplex {
    UnknownDuplex   =  0;
    Full            =  1;
    Half            =  2;
}

// EventRequest - запрос на подключение к потоку данных.
message EventRequest {
    string ClientName         = 1; // Имя клиента (сервиса).
    repeated EventType Events = 2; // Список событий, которые отправляются клиенту.
    repeated string Nets      = 3; // Список сетей в формате CIDR(A.B.C.D/N).
}

// Event - событие.
message Event {
    EventType Type            = 1; // Тип события
    string Host               = 2; // Адрес устройства-отправителя сообщения.
    uint32 Port               = 3; // Индекс порта, на котором произошло событие.
    PortSpeed Speed          =  4; // Скорость подключения на порту
    PortDuplex Duplex        =  5; // Формат передачи данных на порту
}